[package]
name = "artimonist"
version = "1.3.2"
edition = "2024"
crate-type = ["lib"]

homepage = "https://artimonist.org/"
repository = "https://github.com/artimonist/core/"
authors = ["Artimonist <artimonist@gmail.com>"]
description = "A tool for generating mnemonics and wallets."
license = "MIT"
keywords = ["bitcoin", "wallet", "mnemonic", "crypto", "art"]
categories = ["cryptography"]

exclude = [
    ".github/*",
]

[features]
default = []
testnet = [] # use testnet
serde = ["dep:serde", "dep:rmp-serde"] # generic diagram
extfmt = [] # ypriv, ypub, zpriv, zpub etc.

[dependencies]
bitcoin = "0.32.5"
thiserror = "2.0.11"
xbits = "0.8.0"
# crypto libs
scrypt = { version = "0.11.0", default-features = false }
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
# optional
serde = { version = "1.0.217", features = ["derive"], optional = true }
rmp-serde = { version = "1.3.0", optional = true }

[dev-dependencies]
bitcoin = { version = "0.32.5", features = ["base64"] }
rust-crypto = "0.2" # not support wasm, because of rustc-serialize v0.3.25

