[package]
name = "artimonist"
version = "1.8.0"
edition = "2024"
crate-type = ["lib"]

homepage = "https://artimonist.org/"
repository = "https://github.com/artimonist/core/"
authors = ["Artimonist <artimonist@gmail.com>"]
description = "A tool for generating mnemonics and wallets."
license = "MIT"
keywords = ["bitcoin", "wallet", "mnemonic", "crypto", "art"]
categories = ["cryptography"]

exclude = [
    ".github/*",
]

[features]
default = []
testnet = [] # use testnet
serde = ["dep:serde", "dep:rmp-serde"] # generic diagram for any type
extfmt = [] # ypriv, ypub, zpriv, zpub etc.

[dependencies]
bitcoin = "0.32"
thiserror = "2"
xbits = "0.8"
unicode-normalization = "0.1"

# crypto libs
scrypt = { version = "0.11", default-features = false }
pbkdf2 = "0.12"
sha2 = "0.10"
aes = "0.8"
argon2 = "0.5"
rand = "0.8"

# optional
serde = { version = "1", features = ["derive"], optional = true }
rmp-serde = { version = "1.3", optional = true }

[dev-dependencies]
anyhow = "1"
bitcoin = { version = "0.32", features = ["base64"] }
hex = "0.4"
rust-crypto = "0.2" # not support wasm, because of rustc-serialize v0.3.25

